@@ -1,3 +1,8 @@
+2016-02-03  Patrick Palka  <ppalka@gcc.gnu.org>
+
+	PR c++/69056
+	g++.dg/cpp0x/pr69056.C: New test.
+
 2016-02-03  Vladimir Makarov  <vmakarov@redhat.com>
 	    Alexandre Oliva  <aoliva@redhat.com>
 
